# genetique-analysis-python

./: .gitignore  MDS.r  config.py  constants.py  description.py  error_generation.py  generation.py  install.sh  main.py  main_error_tests.py  ml_relate.py  pairwise_differences.py  pyproject.toml  readme.md  recaptures.py  requirements.txt  test_stats.py  utils.py
genetique_analysis/: __init__.py
genetique_analysis/analysis/: __init__.py  description.py  error_generation.py  generation.py  ml_relate.py  pairwise_differences.py  recaptures.py  test_stats.py
genetique_analysis/cli/: __init__.py  error_tests.py  main.py
genetique_analysis/core/: __init__.py  config.py  constants.py
genetique_analysis/utils/: __init__.py  utils.py
